# Alghago

./: README.md
alghago_algorithm/: CMakeLists.txt  package.xml
alghago_algorithm/include/alghago_algorithm/: alghago_algorithm.h  common_math.h
alghago_algorithm/src/: alghago_algorithm.cpp  alghago_algorithm_node.cpp
alghago_description/: CMakeLists.txt  package.xml
alghago_gazebo/: CMakeLists.txt  package.xml
alghago_gazebo/launch/: alghago.launch~
alghago_gazebo/worlds/: alghago.world
alghago_gui/: CMakeLists.txt  mainpage.dox  package.xml
alghago_gui/include/alghago_gui/: main_window.hpp  qnode.hpp
alghago_gui/src/: main.cpp  main_window.cpp  qnode.cpp
alghago_gui/ui/: main_window.ui
alghago_ik_solver/: CMakeLists.txt  package.xml
alghago_ik_solver/include/alghago_ik_solver/: alghago_ik_solver.h
alghago_ik_solver/src/: alghago_ik_solver.cpp
alghago_launcher/: CMakeLists.txt  package.xml
alghago_launcher/launch/: alghago_all.launch~
alghago_msgs/: CMakeLists.txt~  package.xml
alghago_msgs/msg/: Badukal.msg  BadukalArray.msg
alghago_shooter/: CMakeLists.txt  package.xml
alghago_statemachine/: CMakeLists.txt  package.xml
alghago_statemachine/src/: alghago_statemachine.py
badukpan_extractor/: CMakeLists.txt  package.xml
badukpan_extractor/include/: badukpan_extractor.h
badukpan_extractor/src/: badukpan.cpp  badukpan_extractor.cpp
model/badukal_black/: model.config  model.sdf
model/badukal_white/: model.config  model.sdf
model/badukpan/: model.config  model.sdf  model.sdf~
model/badukpan/materials/scripts/: badukpan.material  badukpan.material~
suhan_math/: CMakeLists.txt  package.xml
suhan_math/include/suhan_math/: common_math.h
suhan_math/src/suhan_math/: suhan_math.cpp
