<?xml version="1.0"?>
<package>
  <name>alghago_gui</name>
  <version>0.1.0</version>
  <description>

     alghago_gui

  </description>
  <maintainer email="nuc@gmail.com">nuc</maintainer>
  <author>nuc</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>alghago_msgs</build_depend>
  <run_depend>alghago_msgs</run_depend>

  <build_depend>smach_msgs</build_depend>
  <run_depend>smach_msgs</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>





 
</package>
