<?xml version="1.0"?>
<package>
  <name>badukpan_extractor</name>
  <version>0.0.0</version>
  <description>The badukpan_extractor package</description>

  <maintainer email="psh117@gmail.com">Suhan Park</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>alghago_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>alghago_msgs</run_depend>


  <export>

  </export>
</package>
